# kite

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: ClangTidy.cmake  Format.cmake
src/: CMakeLists.txt  main.cpp  main.qml
src/backend/: BookmarkManager.cpp  BookmarkModel.cpp  Browser.cpp  SearchBarManager.cpp
src/backend/include/: BookmarkManager.hpp  BookmarkModel.hpp  Browser.hpp  SearchBarManager.hpp  TabManager.hpp
src/frontend/: BookmarkAddButton.qml  BookmarkButton.qml  PageContent.qml  PageControlButton.qml  SearchBar.qml  Tab.qml  TabBarFunctions.js
